# AndroidInject

./: CMakeLists.txt  README.md  build.bat  build.sh
include/: ElfParser.h  Injector.h  ProcessMonitor.h  RemoteProcess.h  SolistHider.h  Types.h  Utils.h
src/: ElfParser.cpp  Injector.cpp  ProcessMonitor.cpp  RemoteProcess.cpp  SolistHider.cpp  Utils.cpp  main.cpp
testlib/: CMakeLists.txt  build.bat  testlib.cpp
